fixed location info spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -327,17 +327,15 @@ a, a:hover
 .location-info p span {
     width: 40px;
     font-size: 24px;
-    color: #666;
-    vertical-align: middle;
+    color: black;
 }
+
 .location-info p {
     margin-bottom: 5px;
-		text-align: left;
-		vertical-align: middle;
     font-size: 18px;
     line-height: 32px;
-    color: #000;
-		margin-left: 2em;
+    color: black;
+		margin-left: 0em;
 }
 .contact-icon-container {
     position: absolute;
@@ -527,6 +525,7 @@ tr:hover {
 		.p-text {
 			padding: 0px 2em 0px 0em;
 		}
+
 
 }
 /****/
